$Id$

2015-11-15  Christian Franke  <franke@computer.org>

	os_win32/installer.nsi: Use macros from 'LogicLib.nsh' where possible.
	Add missing MessageBox /SD options.

2015-11-07  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Micron M500DC/M510DC Enterprise SSDs: Rename, add M510DC
	- SandForce Driven SSDs: Mushkin Chronos 7mm/MX/G2, Enhanced ECO2
	- Innodisk 3MG2-P SSDs
	- SiliconMotion based SSDs: Crucial BX100 (ticket #597)

2015-10-31  Christian Franke  <franke@computer.org>

	atacmds.cpp, atacmds.h, knowndrives.cpp, knowndrives.h:
	Read default SMART attribute settings from drivedb.h (ticket #465).
	Remove hard-coded attribute names and format settings.

	drivedb.h: Uncomment default settings to create the "DEFAULT" entry.
	Add ",HDD" or ",SSD" to HDD/SSD specific settings.

	smartctl.cpp, smartd.cpp: Use new database initialization function.

	Create branch RELEASE_6_4_DRIVEDB with last drivedb.h file
	compatible with smartmontools 6.4.

2015-10-22  Paul Grabinar  <pgrabinar@ocz.com>

	drivedb.h:
	- SandForce Driven SSDs: OCZ RevoDrive 350, Z-Drive 4500
	- Indilinx Barefoot 3 based SSDs: Add attributes,
	  OCZ ARC 100, Saber 1000, Vector 180, Vertex 460A
	- OCZ Intrepid 3000 SSDs: Intrepid 3700
	- OCZ Trion

2015-10-20  Christian Franke  <franke@computer.org>

	Reduce variable scope where possible (cppcheck: variableScope).

	Makefile.am: Remove *.s from files used to generate svnversion.h.

2015-10-18  Alex Samorukov <samm@os2.kiev.ua>

	fixes suggested by cppcheck:
	Check realloc result to avoid memory leak (memleakOnRealloc)
	Fix printf() signednsess (invalidPrintfArgType_sint)

2015-10-17  Christian Franke  <franke@computer.org>

	Various fixes suggested by cppcheck:
	Close FILE pointer before reopening it (cppcheck: publicAllocationError).
	Add missing member initializations to ctors (cppcheck: uninitMemberVar).
	Remove redundant nullptr check (cppcheck: nullPointerRedundantCheck).
	Remove redundant assignments (cppcheck: redundantAssignment).